--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ for i in .bashrc .ripit .vimrc .vim .inputrc .profile .screenrc todo.cfg .tmux.c
     ln -s configfiles/$i .
 done
 
-for i in whipper; do
+for i in whipper MusicBrainz; do
     ln -s configfiles/$i .config/
 
 mkdir -p ~/.ipython
