--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,12 @@
 #!/bin/bash
 
 cd $HOME
-git clone https://github.com/spookypeanut/configfiles.git
+if [ ! -d configfiles ]; then
+    git clone https://github.com/spookypeanut/configfiles.git
+else
+    echo configfiles already cloned
+fi
+
 mkdir -p bin
 for i in .bashrc .ripit .vimrc .vim .inputrc .profile .screenrc todo.cfg .tmux.conf .Xmodmap .fonts.conf .xsessionrc; do
     ln -sv $HOME/configfiles/$i .
@@ -11,8 +16,11 @@ for i in whipper MusicBrainz; do
     ln -sv $HOME/configfiles/$i .config/
 done
 
-mkdir -p ~/.ipython
+mkdir -p $HOME/.ipython
 ln -sv $HOME/configfiles/ipythonrc .ipython/
+
+mkdir -p $HOME/.config/ghb
+ln -sv $HOME/configfiles/handbrakepresets.json $HOME/.config/ghb/presets.json
 
 echo "Now copy across the .bashrc.fscfc if necessary"
 echo "And choose which .gitconfig to use"
