--- a/INSTALL
+++ b/INSTALL
@@ -8,7 +8,7 @@ else
 fi
 
 mkdir -p bin
-for i in .bashrc .ripit .vimrc .vim .inputrc .profile .screenrc todo.cfg .tmux.conf .Xmodmap .fonts.conf .xsessionrc; do
+for i in .bashrc .ripit .vimrc .vim .inputrc .profile .screenrc .tmux.conf .Xmodmap .fonts.conf .xsessionrc; do
     ln -sv $HOME/configfiles/$i .
 done
 
